[package]
name = "rust_basic_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros", "debug-print" ] }
rand = "0.8.5"